# OculusSdkMin

./: .gitignore  CMakeLists.txt
LibOVR/: CMakeLists.txt
LibOVR/Src/Displays/: OVR_Linux_SDKWindow.cpp
